# SimpleDB

./: .gitignore  Cargo.toml  README.md  TODO  q
client-cli/: Cargo.toml
client-cli/src/: main.rs  request.rs  response.rs  simple_db_cli.rs  simpledb_server.rs  table_print.rs  utils.rs
core/: Cargo.toml
core/src/: key.rs  lib.rs  lsm.rs  lsm_error.rs  lsm_options.rs
db/: Cargo.toml
db/src/: database.rs  db_options.rs  lib.rs  selection.rs  simple_db.rs  value.rs
playground/: .gitignore  Cargo.toml
playground/src/: main.rs
server/: Cargo.toml
server/src/: connection.rs  main.rs  options_file.rs  request.rs  response.rs  server.rs
shared/: Cargo.toml
shared/src/: assertions.rs  atomic_shared_ref.rs  connection.rs  key.rs  lib.rs  logger.rs  seek_iterator.rs  simpledb_error.rs  simpledb_file.rs  simpledb_files.rs  simpledb_options.rs  types.rs  utils.rs  value.rs
sql/: Cargo.toml
sql/src/: token.rs
src/: key.rs  lsm.rs  lsm_options.rs  main.rs  memtable.rs  memtables.rs
src/block/: block.rs  block_builder.rs  block_decoder.rs  block_encoder.rs  block_iterator.rs  mod.rs
src/compaction/: compaction.rs  leveled.rs  mod.rs  simple_leveled.rs  tiered.rs
src/memtables/: memtable.rs  memtables.rs  mod.rs
src/sst/: block_cache.rs  mod.rs  sstable.rs  sstable_builder.rs  sstables.rs  sstables_files.rs  ssttable_iterator.rs
src/utils/: atomic_shared_ref.rs  bloom_filter.rs  lsm_file.rs  merge_iterator.rs  mod.rs  storage_iterator.rs  two_merge_iterators.rs  utils.rs
storage/: Cargo.toml
storage/src/: key.rs  lib.rs  lsm.rs  lsm_error.rs  (+2 more)
(+186 files in other folders)
