[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
shared = {path = "../shared" }
rand = "0.9.0-alpha.2"
db = {path = "../db" }
bytes = "1.6.1"
threadpool = "1.8.1"
crossbeam-skiplist = "0.1"
serde = { version = "1.0.204", features = ["derive"] }
env_logger = "0.11.5"
serde_json = "1.0.122"